--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         
           // Create an image for the button
           const img = document.createElement('img');
-          img.src = '../assets/assets/copy-svgrepo-com.svg'; // <- Set to the path of your image
+          img.src = '/assets/assets/copy-svgrepo-com.svg'; // <- Set to the path of your image
           img.alt = 'Copy to clipboard';
           img.style.width = '24px'; // Optional: size tweaks
           img.style.height = '24px';
